# apstr

./: .gitignore  AGENTS.md  Cargo.toml  README  README.md  build.rs  lilwww-todo.md  releasor2000.toml
assets/: CommitMono.css  MyProportional.css  normalize.css  style.css
src/: error.rs  main.rs
src/controllers/: apps.rs  builds.rs  mod.rs
src/helpers/: button_to.rs  mod.rs
src/models/: app.rs  build.rs  hook_run.rs  mod.rs  test_flight_build.rs  workflow.rs
src/views/: apps.rs  home.rs  layout.rs  mod.rs
src/views/apps/: index.rs  mod.rs  new.rs  show.rs
